--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         if (top_bar_old)
             top_bar_old.hide();
 
-
+        obj_info = 0;
     }
 
     function showInfo(obj_num) {
@@ -114,7 +114,6 @@
             $('#museum').hide();
             $('#heritage').hide();
 
-
             $('#state-button-on').hide();
             $('#state-button-off').show();
 
@@ -125,7 +124,7 @@
             $('#univ-button-off').show();
 
             obj_info = 0;
-            $('#panel1').animate({'left': '-1880px'}, 650);
+//            $('#panel1').animate({'left': '-1880px'}, 650);
             $('#panel2').animate({'left': '40px'}, 650);
             $('#panel3').animate({'left': '1920px'}, 650);
             $('#panel4').animate({'left': '1920px'}, 650);
@@ -144,8 +143,9 @@
             $('#heritage').hide();
 
             obj_info = 0;
-            $('#panel2').animate({'left': '-1880px'}, 650);
-            $('#panel3').animate({'left': '40px'}, 650);
+ //           $('#panel1').animate({'left': '-1880px'}, 650);
+            $('#panel2').animate({'left': '40px'}, 650);
+            $('#panel3').animate({'left': '80px'}, 650);
             $('#panel4').animate({'left': '1920px'}, 650);
         } else if (num == 4) {
             $('#panel2').animate({'left': '480px'}, 650);
@@ -193,6 +193,12 @@
             lang = l;
             if (obj_info > 0)
                 showInfo(obj_info);
+
+            if (l == 'pt') {
+                $('.panelHandle').css('background-color', 'black');
+            } else {
+                $('.panelHandle').css('background-color', 'white');
+            }
         }
 
     }
@@ -217,6 +223,7 @@
             return left;
         }
 
+        /*
         $("#p1-handle").mousedown(function (data) {
            $("body").mousemove(function (data) {
                var p3Left = getLeft(3);
@@ -227,7 +234,7 @@
            }).mouseup(function () {
                $("body").off("mousemove");
            });
-        });
+        }); */
 
         $("#p2-handle").mousedown(function (data) {
            //openPanel(2);
@@ -288,9 +295,7 @@
                         class: 'name',
                         text: e.name.toUpperCase()
                     }))
-                    .append($('<span/>', {
-                        text: e.text
-                    }));
+                    .append($('<span/>').html(e.text));
 
                     var info_list = $('<ul/>');
 
@@ -321,9 +326,7 @@
                         class: 'name',
                         text: e.nome.toUpperCase()
                     }))
-                    .append($("<div/>", {
-                        text: e.texto
-                    }));
+                    .append($('<span/>').html(e.texto));
 
                     var info_list = $('<ul/>');
 
@@ -415,7 +418,6 @@
 </head>
 <body>
 <div id="panel1" class="column">
-    <div id="p1-handle" class="panelHandle" style="z-index: 0;"></div>
     <img id="map-1" src="images/glass.png" style="position: absolute; left: 0; top: 0; z-index:10" usemap="#Map1-en">
     <map name="Map1-en" id="Map1-en">
       <area shape="poly" coords="1043,837,1157,840,1155,878,1045,877" onclick="javascript:openPanel(2);" href="#" target="_self" />
