--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
         $.ajax({
                     type: "GET",
-                    url: "http://localhost:8000/data/icom_museus.csv",
+                    url: "/data/icom_museus.csv",
                     success: createInterface
                 });
 
